bug 352424. Default Application on Vista not working. r=rob_strong